--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -33,12 +33,16 @@ h2
 
 h2.subtitle
   font-size: $font-size-subtutle;
+  position: relative;
+  z-index: 1;
 
 
 
 .max-container
   max-width: 1200px;
   margin: 0 auto;
+  position: relative;
+  z-index: 1;
 
 .button-size 
   min-width: 190px;
@@ -173,8 +177,9 @@ h2.subtitle
   background-color: #d1f0fa;
 
 .request-call
-  background-color: #eaeaeb;
   padding-bottom: 32px;
+  position: relative;
+  z-index: 1;
   & input
     width: 100%;
     background: none;
@@ -194,6 +199,9 @@ h2.subtitle
     height: 45px;
     margin: 0 auto;
     display: block;
+
+.request-call-bg
+  background-color: #eaeaeb;
 
 .three
   padding-bottom: 50px;
@@ -246,3 +254,158 @@ h2.subtitle
   margin: 20px auto 8px;
   font-size: $font-size-big
 
+.four
+  position: relative;
+  z-index: 1;
+  padding: 60px 0;
+  &::after
+    content: "";
+    position: absolute;
+    width: 100%;
+    opacity: .46;
+    top: 0;
+    height: 100%;
+    background-image: url("../img/bg4.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  & p
+    max-width: 562px;
+    font-size: 24px;
+    letter-spacing: -1px;
+    line-height: 1.14;
+  & button
+    background-color: $color-green;
+    color: #fff;
+    width: 390px;
+    height: 50px;
+    border-radius: 25px;
+    font-size: 24px;
+
+.five
+  padding: 50px 0;
+
+.product-title
+  font-size: 24px;
+  color: $color-dark-blue;
+  margin-bottom: 15px;
+
+.product-subtitle
+  font-size: 18px;
+  color: $color-dark-blue;
+  margin-bottom: 25px;
+  line-height: 23px;
+
+.product-description
+  font-size: $font-size
+  color: $color-dark-blue;
+  margin-bottom: 20px;
+
+.description
+  & button
+    background-color: $color-blue;
+    color: #fff;
+    font-size: $font-size-big;
+    width: 240px;
+    height: 48px;
+    margin-bottom: 40px
+
+.slick-prev:before, .slick-next:before
+  color: #000;
+
+.slick-slide img
+  margin: 0 auto;
+
+.six
+  position: relative;
+  z-index: 1;
+  padding: 45px 0;
+  &::after
+    content: "";
+    position: absolute;
+    width: 100%;
+    opacity: .46;
+    top: 0;
+    height: 100%;
+    background-image: url("../img/block3-bg.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  & p
+    font-size: 24px;
+    padding-top: 30px
+
+.number
+  font-size: 72px;
+  color: #fff;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $color-red;
+  border-radius: 40px;
+  height: 80px;
+  width: 160px;
+
+.seven
+  padding: 40px 0 50px;
+  & img
+    padding: 25px 0 40px;
+  & button
+    font-size: 24px;
+    color: #fff;
+    background-color: $color-blue;
+    width: 500px;
+    height: 55px;
+
+.eight
+  position: relative;
+  z-index: 1;
+  padding: 60px 0;
+  &::after
+    content: "";
+    position: absolute;
+    width: 100%;
+    opacity: .46;
+    top: 0;
+    height: 100%;
+    background-image: url("../img/block4-bg.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  & p
+    max-width: 562px;
+    font-size: 24px;
+    letter-spacing: -1px;
+    line-height: 1.14;
+  & button
+    background-color: $color-green;
+    color: #fff;
+    width: 390px;
+    height: 50px;
+    border-radius: 25px;
+    font-size: 24px;
+
+.request-call-eight
+  & input
+    border: 1px solid #575c60;
+    background: #fff;
+  & button
+    background-color: $color-blue;
+
+
+.nine
+  padding: 35px 0 55px;
+  & h2
+    padding-bottom: 24px;
+.certificats
+  padding-top: 35px;
+  & img
+    border: 5px solid $color-green;
+
+.footer-gray
+  background-color: #dcdde0;
+  color: #090f17;
