главная страница - десктопная версия готова

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -54,14 +54,18 @@ h2.subtitle
 .header-blue
   background-color: $color-blue;
 
-.header-text
+.text
   font-size: $font-size;
-  color: #fff;
-  display: inline-block
+  display: inline-block;
 
-.header-text_big
-  font-size: 18px;
+.text_white
   color: #fff;
+
+.text_black
+  color: #090f17;
+
+.text_big
+  font-size: 18px;
   display: inline-block;
   padding-right: 30px
 
@@ -348,6 +352,7 @@ h2.subtitle
   background-color: $color-red;
   border-radius: 40px;
   height: 80px;
+  margin-right: 10px;
   width: 160px;
 
 .seven
@@ -409,3 +414,15 @@ h2.subtitle
 .footer-gray
   background-color: #dcdde0;
   color: #090f17;
+  margin-top: -6px
+
+.footer-button
+  background: none;
+  // padding: 5.5px 32px;
+  border: 1px solid $color-green;
+
+.btn-up
+  background-color: $color-green;
+  color: #fff;
+  height: 40px;
+  width: 30px;
