--- a/app/css/main.css
+++ b/app/css/main.css
@@ -40,14 +40,18 @@ h2.subtitle {
 .header-blue {
   background-color: #17b2e6; }
 
-.header-text {
+.text {
   font-size: 14px;
-  color: #fff;
   display: inline-block; }
 
-.header-text_big {
+.text_white {
+  color: #fff; }
+
+.text_black {
+  color: #090f17; }
+
+.text_big {
   font-size: 18px;
-  color: #fff;
   display: inline-block;
   padding-right: 30px; }
 
@@ -325,6 +329,7 @@ h2.subtitle {
   background-color: #f16468;
   border-radius: 40px;
   height: 80px;
+  margin-right: 10px;
   width: 160px; }
 
 .seven {
@@ -385,4 +390,15 @@ h2.subtitle {
 
 .footer-gray {
   background-color: #dcdde0;
-  color: #090f17; }
+  color: #090f17;
+  margin-top: -6px; }
+
+.footer-button {
+  background: none;
+  border: 1px solid #71b100; }
+
+.btn-up {
+  background-color: #71b100;
+  color: #fff;
+  height: 40px;
+  width: 30px; }
